update gulp file supaya run task javascript

--- a/catalog/view/theme/mebeljepara/less/style.less
+++ b/catalog/view/theme/mebeljepara/less/style.less
@@ -2,9 +2,12 @@
 // Import bootstrap
 @import '../bower_components/bootstrap/less/bootstrap.less'; 
 
+
 @import '_variable.less'; 
 @import '_mixin.less'; 
 
+
+// Partials
 @import '_partials/header.less'; 
 @import '_partials/footer.less'; 
 
