--- a/catalog/view/theme/mebeljepara/jade/index.jade
+++ b/catalog/view/theme/mebeljepara/jade/index.jade
@@ -1,26 +1,57 @@
-include _config.jade
+include _include/_config.jade
+include mixin/product.jade
 
 doctype html
 html.no-js(lang="en")
-	
-	include _header.jade
-
+	include _include/_header.jade
 	body
-		// Header section
-		nav.navbar.navbar-fixed-top(role="navigation")
-			.container
-				.navbar-header
-					button.navbar-toggle.collapsed(type="button" 
-						data-toggle="collapse" 
-						data-target="#navbar")
+		//- include _include/_navigation.jade
 
-						span.sr-only Toggle navigation
+		//- Kode content mulai dari sini
+		.container-fluid
+			.row
+				.carousel.slide#slider(data-ride="carousel")
+					ol.carousel-indicators
+						li.active(data-target="slider", data-slide-to="0")
+						li(data-target="slider", data-slide-to="1")
+						li(data-target="slider", data-slide-to="2")
+					.carousel-inner(role="listbox")
+						.item.active
+							img(src="...", alt="...")
+							.carousel-caption ...
+						.item
+							img(src="...", alt="...")
+							.carousel-caption ...
+						.item
+							img(src="...", alt="...")
+							.carousel-caption ...
+					a.left.carousel-control(href="#slider", role="button", data-slide="prev")
+						span.glyphicon.glyphicon-chevron-left(aria-hidden="true")
+						span.sr-only
+					a.right.carousel-control(href="#slider", role="button", data-slide="next")
+						span.glyphicon.glyphicon-chevron-right(aria-hidden="true")
+						span.sr-only
+		.container
+			.row.product-list
+				.col-sm-12
+					.row.product-list--title
+						h3 New products
+					+products(4)
+					+products(4)
+			.row
+			.row.product-list
+				.col-sm-12
+					.row.product-list--title
+						h3 Bestsellers products
+					+products(4)
+					
+			.row.product-list
+				.col-sm-12
+					.row.product-list--title
+						h3 Featured products
+					+products(4)
 
-						each val in [1, 2, 3]
-							span.icon-bar
-							
-					a.navbar-brand(href="#")
-						img.img-responsive
-				.navbar-collapse.collapse#navbar
+			.row
+		//- Kode content mulai berakhir sini
 
-		include _footer.jade
+		include _include/_footer.jade
