--- a/catalog/view/theme/mebeljepara/less/_variable.less
+++ b/catalog/view/theme/mebeljepara/less/_variable.less
@@ -1,22 +1,41 @@
 // Yellow
 @sun-flower:	#f1c40f;
 @orange:		#f39c12;
-
 // Coklat
 @carrot:		#e67e22;
 @pumpkin:		#d35400;
-
 // Abu2
 @clouds:		#ecf0f1;
 @silver:		#bdc3c7;
-
 // Merah
 @alizarin:		#e74c3c;
 @pomegranate:	#c0392b;
 @red:			#ed1651;
-
 // biru 
 @belize-hole: 	#2980b9;
-
+// Hitam
 @black:			#000;
 @light-black:	#555;
+
+/**
+ * Varibale menu
+ */
+@navbar-brown-color: #FFF;
+@navbar-brown-bg: @light-black;
+@navbar-brown-border: @navbar-default-border;
+// Navbar links
+@navbar-brown-link-color: @navbar-default-link-color;
+@navbar-brown-link-hover-color: @navbar-default-link-hover-color;
+@navbar-brown-link-hover-bg: @sun-flower;
+@navbar-brown-link-active-color: #FFFFFF;
+@navbar-brown-link-active-bg: @pomegranate;
+@navbar-brown-link-disabled-color: @navbar-default-link-disabled-color;
+@navbar-brown-link-disabled-bg: @navbar-default-link-disabled-bg;
+// Navbar brand label
+@navbar-brown-brand-color: @navbar-default-brand-color;
+@navbar-brown-brand-hover-color: @navbar-default-brand-hover-color;
+@navbar-brown-brand-hover-bg: @navbar-default-brand-hover-bg;
+// Navbar toggle
+@navbar-brown-toggle-hover-bg: @navbar-default-toggle-hover-bg;
+@navbar-brown-toggle-icon-bar-bg: @navbar-default-toggle-icon-bar-bg;
+@navbar-brown-toggle-border-color: @navbar-default-toggle-border-color;
